--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,11 +144,11 @@
 
     <!--This is public branch-->
     <string-array name="url_array">
-        <item>http://postnget.azurewebsites.net</item>
-        <item>http://postnget-test.azurewebsites.net</item>
-        <item>http://192.168.1.5/postnget</item>
+        <item>postnget.azurewebsites.net</item>
+        <item>postnget-test.azurewebsites.net</item>
+        <item>192.168.1.5/postnget</item>
         <!--<item>http://192.168.1.3/PostngetWebApi/api/router</item>-->
-        <item>http://96.230.122.177/postnget</item>
+        <item>96.230.122.177/postnget</item>
 
         <item>http://10.0.2.2/postnget</item>
         <!--<item>http://192.168.1.11/postnget</item>-->
