--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="label_reset">Reset to Defaults</string>
     <string name="label_clear_cache">Clear Locations Cache</string>
     <string name="label_btnreset">Reset</string>
-    <string name="label_clear">Clear</string>
+    <string name="label_btnclear">Clear</string>
     <string name="label_btnpsw_show">Show Psw</string>
     <string name="label_btnpsw_get">Get Passw</string>
     <string name="label_btnpsw_hide">Hide Psw</string>
