--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,11 +88,11 @@
     <string name="tracking_has_now_stopped">Tracking has now stopped</string>
     <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval</string>
     <string name="user_needs_to_restart_app">Please restart the application</string>
-    <string name="reachability_error">Cannot reach the URL\nTry again</string>
+    <string name="reachability_error">Cannot reach the URL</string>
     <string name="temp_flight_alloc">Cannot reach the URL \nTemp flight number is assigned</string>
     <string name="max_number_reached">You reached maximum allowed number of waypoints</string>
     <string name="flight_has_ended">The flight has ended</string>
-    <string name="flight_uknown_req">Unknown request. The flight has ended.</string>
+    <string name="flight_uknown_req">Unknown request\nThe flight has ende.</string>
     <string name="flight_db_error">Database error</string>
     <string name="toast_server_error">Server communication error</string>
     <string name="new_flight_id">You got a new flight id</string>
@@ -102,18 +102,19 @@
     <string name="email_commment">Please add your comments here:</string>
     <string name="email_notinstalled">There is no email client installed.</string>
     <string name="start_flight_first">Flight needs to be started first</string>
-    <string name="load_logbook">Loading Pilot LogBook from Cloud ...</string>
     <string name="driving">Looks like you are driving on road\nThe flight has been terminated</string>
     <string name="toast_permiss_declined_1">The app cannot run without this permission</string>
     <string name="toast_permiss_declined_2">The app cannot run in debug mode without this permission</string>
-    <string name="toast_noconnectivity">FONT: Connectivity unavailable\ncannot send location</string>
+    <string name="toast_noconnectivity">FONT: Connectivity unavailable\nFailed to send location cache</string>
+    <string name="toast_cachesending"> Sending location points left in cache</string>
+    <string name="progressbar_load_logbook">Loading Pilot LogBook from Cloud ...</string>
+    <string name="progressbar_cachesending"> Sending cache to Cloud ...</string>
 
     <!--dialog-->
     <string name="acft_dialog">You do not have Aircraft N number populated. Is it OK?</string>
     <string name="acft_dialog_neg">No, go to Aircraft Settings</string>
     <string name="acft_dialog_pos">Yes, I will restart the flight</string>
 
-    <string name="unsentrecords_toast"> Sending location points left in cache</string>
     <string name="unsentrecords_dialog"> location points left in cache. Do you want to send them to cloud now?</string>
     <string name="unsentrecords_dialog_neg">No, just cancel.</string>
     <string name="unsentrecords_dialog_pos">Yes, try it now.</string>
