--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,9 +88,9 @@
     <string name="tracking_has_now_stopped">Tracking has now stopped</string>
     <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval</string>
     <string name="user_needs_to_restart_app">Please restart the application</string>
-    <string name="reachability_error">Failed to reach the URL</string>
+    <string name="reachability_error">Failed to reach the cloud</string>
     <string name="cloud_error">Cloud server error</string>
-    <string name="temp_flight_alloc">Failed to reach the URL \nTemp flight number is assigned</string>
+    <string name="temp_flight_alloc">Failed to reach the cloud \nTemp flight number is assigned</string>
     <string name="max_number_reached">You reached maximum allowed number of waypoints</string>
     <string name="flight_has_ended">The flight has ended</string>
     <string name="flight_uknown_req">Unknown request\nThe flight has ende.</string>
