--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,9 +162,9 @@
     <string-array name="url_array">
         <item>postnget.azurewebsites.net</item>
         <item>postnget-test.azurewebsites.net</item>
-        <item>192.168.1.2/postnget</item>
+        <item>192.168.1.2/PostngetWebApi</item>
         <!--<item>http://192.168.1.3/PostngetWebApi/api/router</item>-->
-        <item>96.230.122.177/postnget</item>
+        <item>96.230.122.177/PostngetWebApi</item>
 
         <item>10.0.2.2/PostngetWebApi</item>
         <!--<item>http://192.168.1.11/postnget</item>-->
